<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:background="@color/ingame_background_color"
    tools:ignore="HardcodedText">

    <!-- Main Layout -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/id_Main_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/questmanager"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_24"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txt_main_search"
        app:layout_constraintEnd_toStartOf="@+id/id_Main_Guideline_2"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/id_Main_Guideline_1"
        app:layout_constraintTop_toTopOf="@+id/id_Main_Guideline_3"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText" />

    <!-- Field to search -->
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/txt_main_search"
        android:layout_width="@dimen/width_240"
        android:layout_height="@dimen/height_48"
        android:layout_marginTop="@dimen/marign_5"
        android:background="@drawable/textfield_background"
        android:hint="@string/searchhint"
        android:inputType="text"
        android:maxLines="1"
        android:paddingLeft="@dimen/padding_16"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_16"
        app:layout_constraintEnd_toStartOf="@+id/btn_search"
        app:layout_constraintStart_toStartOf="@+id/id_Main_Guideline_1"
        app:layout_constraintTop_toBottomOf="@+id/id_Main_TextView"
        tools:ignore="ContentDescription" />

    <!--  btn_search is used to search a question  -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_search"
        android:layout_width="@dimen/width_120"
        android:layout_height="@dimen/height_48"
        android:layout_marginTop="@dimen/marign_5"
        android:background="@drawable/rectloginlogup"
        android:onClick="search"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@color/thirdtext"
        android:textSize="@dimen/textsize_16"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/id_Main_Guideline_2"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toEndOf="@+id/txt_main_search"
        app:layout_constraintTop_toBottomOf="@+id/id_Main_TextView" />

    <!--  rv_main_quest is used to show all question to the main screen  -->

    <!--  btn_logout is used to logout  -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_logout"
        android:layout_width="@dimen/width_120"
        android:layout_height="@dimen/height_48"
        android:background="@drawable/cut_1"
        android:gravity="center"
        android:paddingRight="15dp"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="@color/thirdtext"
        android:textSize="@dimen/textsize_16"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/id_Main_Guideline_4"
        app:layout_constraintEnd_toStartOf="@+id/btn_main_add"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/id_Main_Guideline_1" />

    <!--  btn_logout is used to direct to activity_add_main_item layout  -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_main_add"
        android:layout_width="@dimen/width_120"
        android:layout_height="@dimen/height_48"
        android:background="@drawable/cut_2"
        android:text="@string/addquestion"
        android:textAllCaps="false"
        android:textColor="@color/thirdtext"
        android:textSize="@dimen/textsize_16"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/id_Main_Guideline_4"
        app:layout_constraintEnd_toStartOf="@+id/btn_profile"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="@+id/id_Main_Guideline_1" />

    <!--  btn_profile is used to direct to activity_profile layout  -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_profile"
        android:layout_width="@dimen/width_120"
        android:layout_height="@dimen/height_48"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/cut_3"
        android:paddingLeft="15dp"
        android:text="@string/profile"
        android:textAllCaps="false"
        android:textColor="@color/thirdtext"
        android:textSize="@dimen/textsize_16"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/id_Main_Guideline_4"
        app:layout_constraintEnd_toStartOf="@+id/id_Main_Guideline_2" />

    <!-- The id_Main_Guideline_1 is used to limit the left space where all items are being place inside -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/id_Main_Guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <!-- The id_Main_Guideline_2 is used to limit the right space where all items are being place inside -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/id_Main_Guideline_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

    <!-- The id_Main_Guideline_3 is used to limit the bottom space where all items are being place inside -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/id_Main_Guideline_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <!-- The id_Main_Guideline_4 is used to limit the bottom space where all items are being place inside -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/id_Main_Guideline_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_main_search" />


</androidx.constraintlayout.widget.ConstraintLayout>