<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ingame_background_color"
    tools:context=".controller.UpdateProfileActivity">

    <TextView
        android:id="@+id/lbl_title_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/title_edit_score"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_36"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/id_Update_Score_Guideline_2"
        app:layout_constraintStart_toStartOf="@+id/id_Update_Score_Guideline_1"
        app:layout_constraintTop_toTopOf="@+id/id_Update_Score_Guideline_3" />

    <TextView
        android:id="@+id/lbl_change_question_edit_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/change_question"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/id_Update_Score_Guideline_2"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="@+id/id_Update_Score_Guideline_1"
        app:layout_constraintTop_toBottomOf="@+id/lbl_title_edit_profile" />

    <EditText
        android:id="@+id/txt_score_update_change_question"
        android:layout_width="@dimen/width_240"
        android:layout_height="@dimen/height_34"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_profile_border"
        android:ems="10"
        android:gravity="center|start"
        android:inputType="number|numberDecimal"
        android:paddingLeft="@dimen/padding_30"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_20"
        app:layout_constraintEnd_toStartOf="@+id/id_Update_Score_Guideline_2"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/id_Update_Score_Guideline_1"
        app:layout_constraintTop_toBottomOf="@+id/lbl_change_question_edit_score" />

    <TextView
        android:id="@+id/lbl_hint_edit_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_score"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/marign_8"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/id_Update_Score_Guideline_2"
        app:layout_constraintHorizontal_bias="0.252"
        app:layout_constraintStart_toStartOf="@+id/id_Update_Score_Guideline_1"
        app:layout_constraintTop_toBottomOf="@+id/txt_score_update_change_question" />

    <EditText
        android:id="@+id/txt_score_update_hint"
        android:layout_width="@dimen/width_240"
        android:layout_height="@dimen/height_34"
        android:layout_marginTop="@dimen/marign_8"
        android:background="@drawable/edit_profile_border"
        android:ems="10"
        android:gravity="center|start"
        android:inputType="number|numberDecimal"
        android:paddingLeft="@dimen/padding_30"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_20"
        app:layout_constraintEnd_toStartOf="@+id/id_Update_Score_Guideline_2"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/id_Update_Score_Guideline_1"
        app:layout_constraintTop_toBottomOf="@+id/lbl_hint_edit_score" />

    <TextView
        android:id="@+id/lbl_initial_edit_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inital_score"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/marign_8"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/id_Update_Score_Guideline_2"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toStartOf="@+id/id_Update_Score_Guideline_1"
        app:layout_constraintTop_toBottomOf="@+id/txt_score_update_hint" />

    <EditText
        android:id="@+id/txt_score_update_initial"
        android:layout_width="@dimen/width_240"
        android:layout_height="@dimen/height_34"
        android:layout_marginTop="@dimen/marign_8"
        android:background="@drawable/edit_profile_border"
        android:ems="10"
        android:gravity="center|start"
        android:inputType="number|numberDecimal"
        android:paddingLeft="@dimen/padding_30"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_20"
        app:layout_constraintEnd_toStartOf="@+id/id_Update_Score_Guideline_2"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/id_Update_Score_Guideline_1"
        app:layout_constraintTop_toBottomOf="@+id/lbl_initial_edit_score" />

    <TextView
        android:id="@+id/lbl_passlevel_edit_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marign_8"
        android:text="@string/pass_level_score"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/id_Update_Score_Guideline_2"
        app:layout_constraintHorizontal_bias="0.305"
        app:layout_constraintStart_toStartOf="@+id/id_Update_Score_Guideline_1"
        app:layout_constraintTop_toBottomOf="@+id/txt_score_update_initial" />

    <EditText
        android:id="@+id/txt_score_update_passlevel"
        android:layout_width="@dimen/width_240"
        android:layout_height="@dimen/height_34"
        android:layout_marginTop="@dimen/marign_8"
        android:background="@drawable/edit_profile_border"
        android:ems="10"
        android:gravity="center|start"
        android:inputType="number|numberDecimal"
        android:paddingLeft="@dimen/padding_30"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_20"
        app:layout_constraintEnd_toStartOf="@+id/id_Update_Score_Guideline_2"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/id_Update_Score_Guideline_1"
        app:layout_constraintTop_toBottomOf="@+id/lbl_passlevel_edit_score" />

    <TextView
        android:id="@+id/lbl_wrong_edit_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/wrong_score"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/id_Update_Score_Guideline_2"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toStartOf="@+id/id_Update_Score_Guideline_1"
        app:layout_constraintTop_toBottomOf="@+id/txt_score_update_passlevel" />

    <EditText
        android:id="@+id/txt_score_update_wrong"
        android:layout_width="@dimen/width_240"
        android:layout_height="@dimen/height_34"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_profile_border"
        android:ems="10"
        android:gravity="center|start"
        android:inputType="number|numberDecimal"
        android:paddingLeft="@dimen/padding_30"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_20"
        app:layout_constraintBottom_toTopOf="@+id/id_Update_Score_Guideline_4"
        app:layout_constraintEnd_toStartOf="@+id/id_Update_Score_Guideline_2"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/id_Update_Score_Guideline_1"
        app:layout_constraintTop_toBottomOf="@+id/lbl_wrong_edit_score"
        app:layout_constraintVertical_bias="0.0" />

    <!--  btn_cancel_profile is used to cancel the update profile  -->
    <Button
        android:id="@+id/btn_cancel_score"
        android:layout_width="@dimen/width_150"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/rectmenu"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_20"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/id_Update_Score_Guideline_4"
        app:layout_constraintEnd_toStartOf="@+id/id_Update_Score_Guideline_2"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="@+id/id_Update_Score_Guideline_1"
        app:layout_constraintTop_toBottomOf="@+id/txt_score_update_wrong"
        app:layout_constraintVertical_bias="0.466" />

    <!--  btn_update_profile is used to update QM's profile  -->
    <Button
        android:id="@+id/btn_update_score"
        android:layout_width="@dimen/width_150"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/rectmenu"
        android:onClick="updateScores"
        android:text="@string/update"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_20"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/id_Update_Score_Guideline_4"
        app:layout_constraintEnd_toStartOf="@+id/id_Update_Score_Guideline_2"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel_score"
        app:layout_constraintTop_toBottomOf="@+id/txt_score_update_wrong"
        app:layout_constraintVertical_bias="0.466" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/id_Update_Score_Guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/id_Update_Score_Guideline_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/id_Update_Score_Guideline_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/id_Update_Score_Guideline_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".95" />



</androidx.constraintlayout.widget.ConstraintLayout>