<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ingame_background_color"
    tools:context=".controller.UpdateProfileActivity">

    <TextView
        android:id="@+id/lbl_title_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_edit_profile"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_26"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/id_Update_Profile_Guideline_2"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="@+id/id_Update_Profile_Guideline_1"
        app:layout_constraintTop_toTopOf="@+id/id_Update_Profile_Guideline_3" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile_update"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/avatar_1"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toTopOf="@+id/id_Update_Profile_Guideline_4"
        app:layout_constraintEnd_toStartOf="@+id/id_Update_Profile_Guideline_2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/id_Update_Profile_Guideline_1"
        app:layout_constraintTop_toBottomOf="@+id/lbl_title_edit_profile"
        app:layout_constraintVertical_bias="0.013"/>

    <TextView
        android:id="@+id/lbl_name_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/full_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/id_Update_Profile_Guideline_2"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="@+id/id_Update_Profile_Guideline_1"
        app:layout_constraintTop_toBottomOf="@+id/img_profile_update" />

    <!--  Field is used to input QM's name  -->
    <EditText
        android:id="@+id/txt_profile_update_name"
        android:layout_width="@dimen/width_300"
        android:layout_height="@dimen/height_58"
        android:layout_marginTop="@dimen/marign_8"
        android:background="@drawable/edit_profile_border"
        android:ems="10"
        android:gravity="center|start"
        android:onClick="hideFullNameError"
        android:paddingLeft="30px"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_20"
        app:layout_constraintBottom_toTopOf="@+id/id_Update_Profile_Guideline_4"
        app:layout_constraintEnd_toStartOf="@+id/id_Update_Profile_Guideline_2"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/id_Update_Profile_Guideline_1"
        app:layout_constraintTop_toBottomOf="@+id/lbl_name_edit_profile"
        app:layout_constraintVertical_bias="0.005" />

    <TextView
        android:id="@+id/lbl_role_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/role"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/id_Update_Profile_Guideline_2"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="@+id/id_Update_Profile_Guideline_1"
        app:layout_constraintTop_toBottomOf="@+id/txt_profile_update_name" />

    <!--  Field is used to display QM's role  -->
    <TextView
        android:id="@+id/txt_profile_update_role"
        android:layout_width="@dimen/width_300"
        android:layout_height="@dimen/height_58"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_profile_border"
        android:ems="10"
        android:gravity="center|start"
        android:paddingLeft="30px"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_20"
        app:layout_constraintBottom_toTopOf="@+id/id_Update_Profile_Guideline_4"
        app:layout_constraintEnd_toStartOf="@+id/id_Update_Profile_Guideline_2"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/id_Update_Profile_Guideline_1"
        app:layout_constraintTop_toBottomOf="@+id/lbl_role_edit_profile"
        app:layout_constraintVertical_bias="0.008" />

    <TextView
        android:id="@+id/lbl_dob_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/yob"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/id_Update_Profile_Guideline_2"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="@+id/id_Update_Profile_Guideline_1"
        app:layout_constraintTop_toBottomOf="@+id/txt_profile_update_role" />

    <!--  Field is used to input QM's year of birth  -->
    <EditText
        android:id="@+id/txt_profile_update_yob"
        android:layout_width="@dimen/width_300"
        android:layout_height="@dimen/height_58"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_profile_border"
        android:ems="10"
        android:gravity="center|start"
        android:inputType="number|numberDecimal"
        android:onClick="hideYearOfBirthError"
        android:paddingLeft="@dimen/padding_30"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_20"
        app:layout_constraintBottom_toTopOf="@+id/id_Update_Profile_Guideline_4"
        app:layout_constraintEnd_toStartOf="@+id/id_Update_Profile_Guideline_2"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/id_Update_Profile_Guideline_1"
        app:layout_constraintTop_toBottomOf="@+id/lbl_dob_edit_profile"
        app:layout_constraintVertical_bias="0.0" />

    <!--  btn_cancel_profile is used to cancel the update profile  -->
    <Button
        android:id="@+id/btn_cancel_profile"
        android:layout_width="@dimen/width_150"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/rectmenu"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_20"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/id_Update_Profile_Guideline_4"
        app:layout_constraintEnd_toStartOf="@+id/id_Update_Profile_Guideline_2"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="@+id/id_Update_Profile_Guideline_1"
        app:layout_constraintTop_toBottomOf="@+id/txt_profile_update_yob"
        app:layout_constraintVertical_bias="0.466" />

    <!--  btn_update_profile is used to update QM's profile  -->
    <Button
        android:id="@+id/btn_update_profile"
        android:layout_width="@dimen/width_150"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/rectmenu"
        android:onClick="onButtonUpdateClick"
        android:text="@string/update"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_20"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/id_Update_Profile_Guideline_4"
        app:layout_constraintEnd_toStartOf="@+id/id_Update_Profile_Guideline_2"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel_profile"
        app:layout_constraintTop_toBottomOf="@+id/txt_profile_update_yob"
        app:layout_constraintVertical_bias="0.466" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/id_Update_Profile_Guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/id_Update_Profile_Guideline_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/id_Update_Profile_Guideline_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/id_Update_Profile_Guideline_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".95" />



</androidx.constraintlayout.widget.ConstraintLayout>